fix: issue where header had wrong color

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,6 +3,7 @@
     justify-content: center;
     padding: 20px 0;
     box-shadow: var(--shadowBase-light);
+    background-color: var(--white);
 }
 
 .contentContainer {
